web_dynamic/static/styles/6-filters.css
.filters {
    background-color: white;
    height: 70px;
    border: 1px solid #DDDDDD;
    border-radius: 4px;
    display: flex;
    align-items: center;
    position: relative;

}

.filters button {
    font-size: 18px;
    background-color: #FF5A5F;
    color: #FFFFFF;
    height: 48px;
    width: 20%;
    border: none;
    border-radius: 4px;
    position: absolute;
    right: 30px;
    box-sizing: border-box;
}

.filters button:hover {
    opacity: 0.9;
}

.filters .locations, .filters .amenities {

    height: 100%;
    width: 25%;
    position: relative;
    display: flex;
    justify-content: center;
    flex-direction: column;
    box-sizing: border-box;
}

.locations {
    border-right: 1px solid #DDDDDD;
}

.filters .locations h3, .filters .amenities h3 {
    font-weight: 600;
    margin: 2px 20px;

}

.locations h4, .amenities h4 {
    font-weight: 400;
    font-size: 14px;
    margin: 2px 20px;

}

.amenities h4 {
    overflow: auto;
}

.popover {
    display: none;
    background-color: #FAFAFA;
    border: 1px solid #DDDDDD;
    border-radius: 4px;
    position: absolute;
    box-sizing: border-box;
    width: 100%;
    top: 100%;
    margin-top: 0;
}

.popover h2 {
    font-size: 16px;
}

.popover li {
    margin: 10px 0 5px 0;
    list-style: none;
}

.popover li input[type="checkbox"] {
    margin-right: 10px;
}

.filters .locations ul {
    padding: 0.5em 0 1em 1em;
}

.filters .locations li {
    margin: 0 0 0 5%;
    padding: 0.2em;
}

.filters .amenities ul {
    padding: 2em 0 2em 3em;
}

div:hover > .popover {
    display: block;
    cursor: pointer;

}

